--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "mike42/escpos-php": "^2.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stripe/stripe-php": "^9.9"
     },
