--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "mike42/escpos-php": "^2.2",
+        "mike42/escpos-php": "^2.2|^3.0",
+        "rawilk/laravel-printing": "^3.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stripe/stripe-php": "^9.9"
     },
