--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "mike42/escpos-php": "^2.2|^3.0",
+        "pusher/pusher-php-server": "^7.2",
         "rawilk/laravel-printing": "^3.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "stripe/stripe-php": "^9.9"
